[package]
name = "tar-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.12.3"
tar = "0.4.38"
json = "*"
flate2 = {version = "1.0", features = ["zlib-ng"], default-features = false}
sha2 = "0.10.6"
hex = "0.4.3"
crc32fast = "1.3.2"
clap = { version = "4.2.7", features = ["derive"] }
parse-size = "1.0.0"
log = "0.4.17"
env_logger = "0.10.0"
