[package]
name = "sky-packer"
version = "0.1.0"
edition = "2021"


[dependencies]
zstd = "0.12.3"
tar = "0.4.38"
json = "*"
flate2 = {version = "1.0", features = ["zlib-ng"], default-features = false}
sha2 = "0.10.6"
hex = "0.4.3"
crc32fast = "1.3.2"
clap = { version = "4.2.7", features = ["derive"] }
parse-size = "1.0.0"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vmm-sys-util = "0.11.1"
rayon = "1.7.0"
ring = { version = "0.16.20", features = ["std"] }
data-encoding = "2.4.0"
